Rework mod discovery, resolution and loading